<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".About"
        android:background="@color/black">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="220dp"
                                                       android:background="@drawable/backrad"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       app:layout_constraintTop_toTopOf="parent"
                                                       android:id="@+id/constraintLayout">


        <ImageView android:layout_width="100dp" android:layout_height="100dp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginTop="40dp"
                   android:id="@+id/ivProfil"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/name" android:textColor="@color/white"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                  app:layout_constraintTop_toBottomOf="@+id/ivProfil" android:id="@+id/textView15"
                  android:textSize="18sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:drawableStart="@drawable/location" android:text="@string/address"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView15"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/email" android:textColor="@color/white"
              android:textSize="18sp" android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="20dp" android:id="@+id/textView16"/>
    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:padding="@dimen/margintop"
              android:text="@string/email_acc" android:textColor="@color/white"
              android:layout_marginTop="10dp"
              app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="20dp"
              android:background="@drawable/backtrans"
              android:textSize="16sp" android:id="@+id/textView17"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/other" android:textColor="@color/white" android:textSize="18sp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="20dp" android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@+id/textView17" android:id="@+id/textView18"/>
    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:text="@string/git" android:textColor="@color/white" android:textSize="16sp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="20dp" android:layout_marginTop="10dp"
              app:layout_constraintTop_toBottomOf="@+id/textView18"
              android:background="@drawable/backtrans" android:padding="@dimen/margintop"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>