<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detail"
        android:background="@color/black">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <ImageView android:id="@+id/back" android:background="@color/grey" android:layout_width="match_parent"
                   android:layout_height="200dp"
                   app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:contentDescription="@string/image"/>
        <ImageView android:id="@+id/ivPost" android:layout_width="165dp" android:layout_height="115dp"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="20dp"
                   app:layout_constraintBottom_toTopOf="@+id/guideline"
                   android:contentDescription="@string/image"/>
        <TextView android:id="@+id/tvSeri"
                  android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_marginStart="10dp"
                  android:gravity="center"
                  app:layout_constraintStart_toEndOf="@+id/ivPost"
                  android:textColor="@color/white"
                  android:layout_marginEnd="10dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:layout_marginTop="140dp" app:layout_constraintTop_toTopOf="@+id/back"/>
        <androidx.cardview.widget.CardView android:id="@+id/official" app:cardCornerRadius="5dp"
                                           android:layout_width="100dp" android:layout_height="wrap_content"
                                           android:backgroundTint="@color/colorPrimary"
                                           app:layout_constraintStart_toEndOf="@+id/ivPost"
                                           android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                                           android:layout_marginEnd="8dp"
                                           app:layout_constraintTop_toBottomOf="@+id/tvSeri"
                                           android:layout_marginTop="10dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/official" android:textColor="@color/white"
                      android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline" app:layout_constraintGuide_begin="220dp"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    android:layout_marginTop="220dp"/>
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/grey"
              android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@+id/ivPost" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline2"
                                                    android:orientation="vertical"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    app:layout_constraintBottom_toBottomOf="parent"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    app:layout_constraintGuide_percent="0.5"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/cpu"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="20dp"
                  android:id="@+id/textView" android:layout_marginEnd="20dp"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2"/>
        <TextView android:id="@+id/tvCpu" android:layout_width="0dp" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="20dp" android:layout_marginTop="10dp"
                  app:layout_constraintTop_toBottomOf="@+id/textView"
                  android:textColor="@color/white"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/os" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvCpu"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"
                  android:id="@+id/textView2"/>
        <TextView android:id="@+id/tvOs" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/display" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvOs"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"
                  android:id="@+id/textView3"/>
        <TextView android:id="@+id/tvDisplay" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/graphics" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvDisplay"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"
                  android:id="@+id/textView4"/>
        <TextView android:id="@+id/tvGraphics" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/chipset" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvGraphics"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"
                  android:id="@+id/textView5"/>
        <TextView android:id="@+id/tvChipset" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  android:layout_marginTop="10dp"
                  app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="20dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                  android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/connectivity" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="20dp" android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/tvChipset"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"
                  android:id="@+id/textView6"/>
        <TextView android:id="@+id/tvConnect" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/ac_adapter" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="20dp" android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/tvConnect"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"
                  android:id="@+id/textView7"/>
        <TextView android:id="@+id/tvAdapter" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
                  app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/memory" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/view"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                  android:id="@+id/textView8"/>
        <TextView android:id="@+id/tvMemory" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white" android:text="@string/drive"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvMemory"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                  android:id="@+id/textView9"/>
        <TextView android:id="@+id/tvDrive" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/web_cam" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvDrive"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                  android:id="@+id/textView10"/>
        <TextView android:id="@+id/tvWebCam" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/keyboard" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvWebCam"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                  android:id="@+id/textView11"/>
        <TextView android:id="@+id/tvKeyboard" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/audio_jack" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2"
                  android:layout_marginStart="20dp" android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/tvKeyboard" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="20dp" android:id="@+id/textView12"/>
        <TextView android:id="@+id/tvJack" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/port" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tvJack"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                  android:id="@+id/textView13"/>
        <TextView android:id="@+id/tvPort" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView13"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:text="@string/dimension" android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2"
                  android:layout_marginStart="20dp" android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/tvPort" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="20dp" android:id="@+id/textView14"/>
        <TextView android:id="@+id/tvDimension" android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="20dp"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView14"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>